Polish translations, other translation fixes

--- a/src/translations/cz.h.txt
+++ b/src/translations/cz.h.txt
@@ -54,7 +54,7 @@
 #define TR_VRENAVIG            "Ne REaREb"
 
 #define LEN_VBLMODE            TR("\005", "\007")
-#define TR_VBLMODE             TR("Vyp\0 ""Kláv.""Páky\0""Kl+Pá""Zap\0 ", "Vypnuto""Klávesy""Páky\0  ""Kl+Páky""Zapnuto")
+#define TR_VBLMODE             TR("Vyp\0 ""Kláv.""Páky\0""Vše\0 ""Zap\0 ", "Vypnuto""Klávesy""Páky\0  ""Vše\0   ""Zapnuto")
 
 #define LEN_TRNMODE            "\003"
 #define TR_TRNMODE             " X "" +="" :="
@@ -73,6 +73,9 @@
 
 #define LEN_VTRIMINC           "\007"
 #define TR_VTRIMINC            "Expo\0  ""ExJemný""Jemný\0 ""Střední""Hrubý\0 "
+
+#define LEN_VBEEPCOUNTDOWN     "\006"
+#define TR_VBEEPCOUNTDOWN      "Tichý\0Zvuk\0 Hlas\0 "
 
 #define LEN_RETA123            "\001"
 
@@ -319,9 +322,9 @@
 #endif
 
 #if defined(PCBTARANIS)
-  #define TR_VSWITCHES         "SA\300""SA-""SA\301""SB\300""SB-""SB\301""SC\300""SC-""SC\301""SD\300""SD-""SD\301""SE\300""SE-""SE\301""SF\300""SF\301""SG\300""SG-""SG\301""SH\300""SH\301" TR_CUSTOMSW " * "
+  #define TR_VSWITCHES         "SA\300""SA-""SA\301""SB\300""SB-""SB\301""SC\300""SC-""SC\301""SD\300""SD-""SD\301""SE\300""SE-""SE\301""SF\300""SF\301""SG\300""SG-""SG\301""SH\300""SH\301" TR_CUSTOMSW "*1 "
 #else
-  #define TR_VSWITCHES         TR_9X_3POS_SWITCHES "THR""RUD""ELE""AIL""GEA""TRN" TR_CUSTOMSW " * "
+  #define TR_VSWITCHES         TR_9X_3POS_SWITCHES "THR""RUD""ELE""AIL""GEA""TRN" TR_CUSTOMSW "*1 "
 #endif
 
 #if defined(PCBSKY9X)
@@ -456,7 +459,7 @@
 #define TR_RENAVIG             "Navig. RotEnc"
 #define TR_THROTTLEREVERSE     TR("ReversPlyn", "Revers plynu")
 #define TR_MINUTEBEEP          TR(INDENT"Minuta", INDENT"Oznamovat minuty")
-#define TR_BEEPCOUNTDOWN       TR(INDENT"Odpočet", INDENT"Hlasitý odpočet")
+#define TR_BEEPCOUNTDOWN       INDENT"Odpočet"
 #define TR_PERSISTENT          INDENT"Trvalé"
 #define TR_BACKLIGHT_LABEL     "Podsvětlení"
 #define TR_BLDELAY             INDENT"Zhasnout po"
@@ -614,7 +617,7 @@
 #define TR_TYPE                TR_SD_TYPE
 #define TR_GLOBAL_VARS         "Globální proměnné"
 #define TR_GLOBAL_VAR          "Global Variable"
-#define TR_MENUGLOBALVARS      "GLOBáLNí PROMěNNé"
+#define TR_MENUGLOBALVARS      "GLOBÁLNÍ PROMěNNÉ"
 #define TR_OWN                 " \043 "
 #define TR_DATE                "Datum"
 #define TR_ROTARY_ENCODER      "R.Encs"
@@ -633,6 +636,7 @@
 #define TR_MOVE                "Přesunout"
 #define TR_PASTE               "Vložit"
 #define TR_DELETE              "Odstranit"
+#define TR_INSERT              "Přidat"
 #define TR_RESET_FLIGHT        "Vynulovat let"
 #define TR_RESET_TIMER1        "Vynulovat Timer1"
 #define TR_RESET_TIMER2        "Vynulovat Timer2"
@@ -646,7 +650,7 @@
 #define TR_BYTES               "[B]"
 #define TR_MODULE_BIND         "[Bind]"
 #define TR_MODULE_RANGE        "[Range]"
-#define TR_RESET               "[Reset]"
+#define TR_RESET_BTN           "[Reset]"
 #define TR_SET                 "[Volby]"
 #define TR_TRAINER             "Trenér"
 #define TR_ANTENNAPROBLEM      CENTER "Problém s TX anténou!"
@@ -657,34 +661,34 @@
 #define TR_CRITICALALARM       INDENT "Kritický Alarm"
 
 #if defined(MAVLINK)
-  #define TR_MAVLINK_RC_RSSI_SCALE_LABEL	"Max RSSI"
-  #define TR_MAVLINK_PC_RSSI_EN_LABEL		"PC RSSI EN"
-  #define TR_MAVMENUSETUP_TITLE				"Mavlink Setup"
-  #define TR_MAVLINK_BAUD_LABEL				"Baudrate"
-  #define TR_MAVLINK_INFOS					"INFOS"
-  #define TR_MAVLINK_MODE					"MODE"
-  #define TR_MAVLINK_CUR_MODE				"Current Mode"
-  #define TR_MAVLINK_ARMED					"Armed"
-  #define TR_MAVLINK_BAT_MENU_TITLE			"BAT RSSI"
-  #define TR_MAVLINK_BATTERY_LABEL			"Flight Battery status"
-  #define TR_MAVLINK_RC_RSSI_LABEL			"RC RSSI"
-  #define TR_MAVLINK_PC_RSSI_LABEL			"PC RSSI"
-  #define TR_MAVLINK_NAV_MENU_TITLE			"NAV"
-  #define TR_MAVLINK_COURSE					"Course"
-  #define TR_MAVLINK_HEADING				"Heading"
-  #define TR_MAVLINK_BEARING				"Bearing"
-  #define TR_MAVLINK_ALTITUDE				"Altitude"
-  #define TR_MAVLINK_GPS					"GPS"
-  #define TR_MAVLINK_NO_FIX					"NO Fix"
-  #define TR_MAVLINK_SAT					"SAT"
-  #define TR_MAVLINK_HDOP					"HDOP"
-  #define TR_MAVLINK_LAT					"LAT"
-  #define TR_MAVLINK_LON					"LON"
+  #define TR_MAVLINK_RC_RSSI_SCALE_LABEL        "Max RSSI"
+  #define TR_MAVLINK_PC_RSSI_EN_LABEL           "PC RSSI EN"
+  #define TR_MAVMENUSETUP_TITLE                 "Mavlink Setup"
+  #define TR_MAVLINK_BAUD_LABEL                 "Baudrate"
+  #define TR_MAVLINK_INFOS                      "INFOS"
+  #define TR_MAVLINK_MODE                       "MODE"
+  #define TR_MAVLINK_CUR_MODE                   "Current Mode"
+  #define TR_MAVLINK_ARMED                      "Armed"
+  #define TR_MAVLINK_BAT_MENU_TITLE             "BAT RSSI"
+  #define TR_MAVLINK_BATTERY_LABEL              "Flight Battery status"
+  #define TR_MAVLINK_RC_RSSI_LABEL              "RC RSSI"
+  #define TR_MAVLINK_PC_RSSI_LABEL              "PC RSSI"
+  #define TR_MAVLINK_NAV_MENU_TITLE             "NAV"
+  #define TR_MAVLINK_COURSE                     "Course"
+  #define TR_MAVLINK_HEADING                    "Heading"
+  #define TR_MAVLINK_BEARING                    "Bearing"
+  #define TR_MAVLINK_ALTITUDE                   "Altitude"
+  #define TR_MAVLINK_GPS                        "GPS"
+  #define TR_MAVLINK_NO_FIX                     "NO Fix"
+  #define TR_MAVLINK_SAT                        "SAT"
+  #define TR_MAVLINK_HDOP                       "HDOP"
+  #define TR_MAVLINK_LAT                        "LAT"
+  #define TR_MAVLINK_LON                        "LON"
 #endif
 
 // Taranis column headers
 #define TR_PHASES_HEADERS      { " Jméno ", " Spínač ", " Trimy ", " Přechod Zap ", " Přechod Vyp " }
-#define TR_LIMITS_HEADERS      { " Jméno ", " Subtrim ", " Min ", " Max ", " Směr ", " Curve ", " Střed PPM ", " Symetrické " }
+#define TR_LIMITS_HEADERS      { " Jméno ", " Subtrim ", " Min ", " Max ", " Směr ", " Křivka ", " Střed PPM ", " Symetrické " }
 #define TR_CSW_HEADERS         { " Funkce ", " Hodnota 1 ", " Hodnota 2 ", " AND Spínač ", " Trvání ", " Zpoždění " }
 
 //Taranis About screen
@@ -739,7 +743,7 @@
 #define TR_CHR_TOGGLE 't'
 #define TR_CHR_HOUR   'h'
 
-#define TR_BEEP_VOLUME         "Beep Volume"
-#define TR_WAV_VOLUME          "Wav Volume"
-#define TR_VARIO_VOLUME        "Vario Volume"
-#define TR_BG_VOLUME           "Bg Volume"
+#define TR_BEEP_VOLUME         "Pípání"
+#define TR_WAV_VOLUME          "Zvuky WAV"
+#define TR_VARIO_VOLUME        "Vario"
+#define TR_BG_VOLUME           "WAV na pozadí"
