CN - 1) Added support for requiring the SwH (AKA Trainer)  switch to be ON before enabling the range test. This  feature may be enabled/disabled in the main setup menu and  will apply to all models. When enabled, a popup box appears  when the range test feature is turned on that prompts the  user to turn the Tranier switch ON to enable the range  test. Added so that the user is less likely to leave the  range test feature on by accident, and also allows the user  to easily switch the range test on and off. Only included  when PCB=TARANIS. Set the compile time option  SWH_RANGE_TEST=YES to include this functionality. Could be  used to resolve issue #159. 2) Added support for including '\n' characters in popup box  messages. Used by the SWH_RANGE_TEST option when displaying  the range test enable prompt.

--- a/src/translations/cz.h.txt
+++ b/src/translations/cz.h.txt
@@ -646,6 +646,9 @@
 #define TR_BYTES               "[B]"
 #define TR_MODULE_BIND         "[Bind]"
 #define TR_MODULE_RANGE        "[Range]"
+#if defined(PCBTARANIS) && defined(SWH_RANGE_TEST)
+#define TR_HOLD_TRAINER_KEY    NL("Hold the Trainer key to\nenable the range test","Hold Trainer key to enable")
+#endif
 #define TR_RESET               "[Reset]"
 #define TR_SET                 "[Volby]"
 #define TR_TRAINER             "Trenér"
