--- a/src/translations/pt.h.txt
+++ b/src/translations/pt.h.txt
@@ -436,6 +436,9 @@
 #define TR_GV                  "GV"
 #define TR_ACHANNEL            "A\004Canal"
 #define TR_RANGE               INDENT"Range"
+#if defined(PCBTARANIS) && defined(SWH_RANGE_TEST)
+#define TR_HOLD_TRAINER_KEY    NL("Hold the Trainer key to\nenable the range test","Hold Trainer key to enable")
+#endif
 #define TR_BAR                 "Bar"
 #define TR_ALARM               INDENT"Alarme"
 #define TR_USRDATA             "UsrData"
