--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -32,7 +32,12 @@
  *
  * !!!!! DO NOT EDIT se.h - EDIT se.h.txt INSTEAD !!!!!!!   
  */
-
+ /* Fotmatting octal codes available in TR_ strings:
+ *  \037\x       -sets LCD x-coord (x value in octal)
+ *  \036         -newline (ARM boards only)
+ *  \001 to \035 -extended spacing (value * FW/2)
+ *  \0           -ends actual string
+ */
    
 // NON ZERO TERMINATED STRINGS
 #define LEN_OFFON              "\003"
@@ -484,22 +489,22 @@
 #define OFS_RX                 4
 #define TR_ACCEL               "Acc:"
 #define TR_NODATA              CENTER "NO DATA"
-#define TR_TM1TM2              "TM1\032TM2"
-#define TR_THRTHP              "THR\032TH%"
+#define TR_TM1TM2              "TM1\037\146TM2"
+#define TR_THRTHP              "THR\037\146TH%"
 #define TR_TOT                 "TOT"
-#define TR_TMR1LATMAXUS        "Tmr1Lat max\006us"
-#define STR_US                 (STR_TMR1LATMAXUS+12)
-#define TR_TMR1LATMINUS        "Tmr1Lat min\006us"
-#define TR_TMR1JITTERUS        "Tmr1 Jitter\006us"
+#define TR_TMR1LATMAXUS        "Tmr1Lat max\037\124us"
+#define STR_US (STR_TMR1LATMAXUS+13)
+#define TR_TMR1LATMINUS        "Tmr1Lat min\037\124us"
+#define TR_TMR1JITTERUS        "Tmr1 Jitter\037\124us"
 
 #if defined(CPUARM)
-  #define TR_TMIXMAXMS         "Tmix max\012ms"
+  #define TR_TMIXMAXMS         "Tmix max"
+  #define TR_FREESTACKMINB     "Free Stack"
 #else
-  #define TR_TMIXMAXMS         "Tmix max\014ms"
+  #define TR_TMIXMAXMS         "Tmix max\037\124ms"
+  #define TR_FREESTACKMINB     "Free Stack\037\124b"
 #endif
 
-#define TR_T10MSUS             "T10ms\016us"
-#define TR_FREESTACKMINB       "Free Stack\010b"
 #define TR_MENUTORESET         CENTER TR_ENTER " Nollar"
 #define TR_PPM                 "PPM"
 #define TR_CH                  "KN"
