--- a/radio/src/translations/cz.h.txt
+++ b/radio/src/translations/cz.h.txt
@@ -443,6 +443,8 @@
 #define TR_ALARM               INDENT"Alarm"
 #define TR_USRDATA             TR("UživData", "Uživ. data")
 #define TR_BLADES              TR(INDENT"ListyVrt", INDENT"Listy vrtule")
+#define TR_SPURGEAR            INDENT"Spur Gear" // T.Foley
+#define TR_PINIONGEAR          INDENT"Pinion Gear" // T.Foley
 #define TR_SCREEN              "Panel "
 #define TR_SOUND_LABEL         "Zvuk"
 #define TR_LENGTH              INDENT"Délka"
