--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -443,8 +443,8 @@
 #define TR_ALARM               INDENT"Alarm"
 #define TR_USRDATA             "Daten"
 #define TR_BLADES              INDENT"Bl\201tter"
-#define TR_SPURGEAR            INDENT"Spur Gear" // T.Foley
-#define TR_PINIONGEAR          INDENT"Pinion Gear" // T.Foley
+#define TR_SPURGEAR            INDENT"Spur Gear"
+#define TR_PINIONGEAR          INDENT"Pinion Gear"
 #define TR_SCREEN              "Bild "
 #define TR_SOUND_LABEL         "T\203ne"
 #define TR_LENGTH	       INDENT"Dauer"
