--- a/radio/src/translations/pl.h.txt
+++ b/radio/src/translations/pl.h.txt
@@ -444,8 +444,8 @@
 #define TR_ALARM               INDENT"Alarm"
 #define TR_USRDATA             TR("Dane Użytk.", "Dane użytkownika")
 #define TR_BLADES              TR(INDENT"Łopaty śmigla", INDENT"Łopaty śmigła")
-#define TR_SPURGEAR            INDENT"Spur Gear" // T.Foley
-#define TR_PINIONGEAR          INDENT"Pinion Gear" // T.Foley
+#define TR_SPURGEAR            INDENT"Spur Gear"
+#define TR_PINIONGEAR          INDENT"Pinion Gear"
 #define TR_SCREEN              "Ekran "
 #define TR_SOUND_LABEL         "Dźwięk"
 #define TR_LENGTH              INDENT"Długość"
