--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -23,6 +23,7 @@
  *
  *
  *
+ *
  * !!!!! DO NOT EDIT se.h - EDIT se.h.txt INSTEAD !!!!!!!
  *
  * In order to make translations easier se.h.txt is parsed and national
@@ -66,6 +67,9 @@
 
 #define LEN_TRNCHN             "\003"
 #define TR_TRNCHN              "KN1KN2KN3KN4"
+
+#define LEN_UART3MODES         "\017"
+#define TR_UART3MODES          "OFF\0           ""SPORT Mirror\0  ""Virtual SP2UART"
 
 #define LEN_DATETIME           "\005"
 #define TR_DATETIME            "DAG: ""TID: "
@@ -669,6 +673,7 @@
 #define TR_CRITICALALARM       INDENT "Kritiskt alarm"
 #define TR_PERSISTENT_MAH      INDENT "Store mAh"
 #define TR_FAS_OFFSET          TR(INDENT "FAS Ofs", INDENT "FAS Offset")
+#define TR_UART3MODE           "Serial port"
 
 #if defined(MAVLINK)
   #define TR_MAVLINK_RC_RSSI_SCALE_LABEL	"Max RSSI"
