--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -69,7 +69,7 @@
 #define TR_TRNCHN              "KN1KN2KN3KN4"
 
 #define LEN_UART3MODES         "\017"
-#define TR_UART3MODES          "OFF\0           ""SPORT Mirror\0  ""Virtual SP2UART"
+#define TR_UART3MODES          "Av\0            ""SPORT-spegel\0  ""VirtuellSP2UART"
 
 #define LEN_DATETIME           "\005"
 #define TR_DATETIME            "DAG: ""TID: "
@@ -347,9 +347,9 @@
 #endif
 
 #if defined(HELI)
-  #define TR_CYC_VSRCRAW   "CYK1""CYK2""CYK3"
+  #define TR_CYC_VSRCRAW       "CYK1""CYK2""CYK3"
 #else
-  #define TR_CYC_VSRCRAW   "[C1]""[C2]""[C3]"
+  #define TR_CYC_VSRCRAW       "[C1]""[C2]""[C3]"
 #endif
 
 #define TR_VSRCRAW             "---\0""Rod\0""Höj\0""Gas\0""Ske\0" TR_POTS_VSRCRAW TR_ROTARY_ENCODERS_VSRCRAW "MAX " TR_CYC_VSRCRAW "TrmR" "TrmH" "TrmG" "TrmS" TR_SW_VSRCRAW
@@ -364,12 +364,12 @@
 #define TR_VFAILSAFE           "Håll\0    ""Special\0 ""Pulsfritt"
 
 #if defined(MAVLINK)
-  #define LEN_MAVLINK_BAUDS		"\006"
-  #define TR_MAVLINK_BAUDS		"4800  ""9600  ""14400 ""19200 ""38400 ""57600 ""76800 ""115200"
-  #define LEN_MAVLINK_AC_MODES	"\011"
-  #define TR_MAVLINK_AC_MODES	"Stabil   ""Akrobat  ""Lås Höjd ""Automat  ""Guidad   ""Hovra    ""Flyg Hem ""Cirkla   ""Håll Pos.""Landa    ""OF Hovra ""Leksak A ""Leksak M ""OGILTIG  "
-  #define LEN_MAVLINK_AP_MODES	"\015"
-  #define TR_MAVLINK_AP_MODES	"Manuell      ""Cirkla       ""Stabilisera  ""Övning       ""Fly by Wire A""Fly by Wire A""Automatisk   ""Flyg Hem     ""Hovra        ""Guidad       ""Initialiserar""OGILTIG      "
+  #define LEN_MAVLINK_BAUDS    "\006"
+  #define TR_MAVLINK_BAUDS     "4800  ""9600  ""14400 ""19200 ""38400 ""57600 ""76800 ""115200"
+  #define LEN_MAVLINK_AC_MODES "\011"
+  #define TR_MAVLINK_AC_MODES  "Stabil   ""Akrobat  ""Lås Höjd ""Automat  ""Guidad   ""Hovra    ""Flyg Hem ""Cirkla   ""Håll Pos.""Landa    ""OF Hovra ""Leksak A ""Leksak M ""OGILTIG  "
+  #define LEN_MAVLINK_AP_MODES "\015"
+  #define TR_MAVLINK_AP_MODES  "Manuell      ""Cirkla       ""Stabilisera  ""Övning       ""Fly by Wire A""Fly by Wire A""Automatisk   ""Flyg Hem     ""Hovra        ""Guidad       ""Initialiserar""OGILTIG      "
 #endif
 
 // ZERO TERMINATED STRINGS
@@ -396,7 +396,11 @@
 #define TR_MODELNAME           "Modellnamn"
 #define TR_PHASENAME           "Modnamn   "
 #define TR_MIXNAME             "Mixnamn "
-#define TR_EXPONAME            "Exponamn "
+#if defined(PCBTARANIS)
+  #define TR_EXPONAME          "Line Name"
+#else
+  #define TR_EXPONAME          "Exponamn"
+#endif
 #define TR_BITMAP              "Modellikon"
 #define TR_TIMER               TR("Timer","Timer ")
 #define TR_ELIMITS             TR("Gränser++","Utökade Gränser")
@@ -673,32 +677,32 @@
 #define TR_CRITICALALARM       INDENT "Kritiskt alarm"
 #define TR_PERSISTENT_MAH      INDENT "Store mAh"
 #define TR_FAS_OFFSET          TR(INDENT "FAS Ofs", INDENT "FAS Offset")
-#define TR_UART3MODE           "Serial port"
+#define TR_UART3MODE           "Serieport"
 
 #if defined(MAVLINK)
-  #define TR_MAVLINK_RC_RSSI_SCALE_LABEL	"Max RSSI"
-  #define TR_MAVLINK_PC_RSSI_EN_LABEL		"PC RSSI EN"
-  #define TR_MAVMENUSETUP_TITLE				"MavlinkInställningar"
-  #define TR_MAVLINK_BAUD_LABEL				"Baudrate"
-  #define TR_MAVLINK_INFOS					"INFOS"
-  #define TR_MAVLINK_MODE					"LÄGE"
-  #define TR_MAVLINK_CUR_MODE				"Nuvarande Läge"
-  #define TR_MAVLINK_ARMED					"Osäkrad"
-  #define TR_MAVLINK_BAT_MENU_TITLE			"BAT RSSI"
-  #define TR_MAVLINK_BATTERY_LABEL			"Status för flygbatteri"
-  #define TR_MAVLINK_RC_RSSI_LABEL			"RC RSSI"
-  #define TR_MAVLINK_PC_RSSI_LABEL			"PC RSSI"
-  #define TR_MAVLINK_NAV_MENU_TITLE			"NAV"
-  #define TR_MAVLINK_COURSE					"Kurs"
-  #define TR_MAVLINK_HEADING				"Riktning"
-  #define TR_MAVLINK_BEARING				"Bäring"
-  #define TR_MAVLINK_ALTITUDE				"Höjd"
-  #define TR_MAVLINK_GPS					"GPS"
-  #define TR_MAVLINK_NO_FIX					"NO Fix"
-  #define TR_MAVLINK_SAT					"SAT"
-  #define TR_MAVLINK_HDOP					"HDOP"
-  #define TR_MAVLINK_LAT					"LAT"
-  #define TR_MAVLINK_LON					"LON"
+  #define TR_MAVLINK_RC_RSSI_SCALE_LABEL  "Max RSSI"
+  #define TR_MAVLINK_PC_RSSI_EN_LABEL     "PC RSSI EN"
+  #define TR_MAVMENUSETUP_TITLE           "MavlinkInställningar"
+  #define TR_MAVLINK_BAUD_LABEL           "Baudrate"
+  #define TR_MAVLINK_INFOS                "INFOS"
+  #define TR_MAVLINK_MODE                 "LÄGE"
+  #define TR_MAVLINK_CUR_MODE             "Nuvarande Läge"
+  #define TR_MAVLINK_ARMED                "Osäkrad"
+  #define TR_MAVLINK_BAT_MENU_TITLE       "BAT RSSI"
+  #define TR_MAVLINK_BATTERY_LABEL        "Status för flygbatteri"
+  #define TR_MAVLINK_RC_RSSI_LABEL        "RC RSSI"
+  #define TR_MAVLINK_PC_RSSI_LABEL        "PC RSSI"
+  #define TR_MAVLINK_NAV_MENU_TITLE       "NAV"
+  #define TR_MAVLINK_COURSE               "Kurs"
+  #define TR_MAVLINK_HEADING              "Riktning"
+  #define TR_MAVLINK_BEARING              "Bäring"
+  #define TR_MAVLINK_ALTITUDE             "Höjd"
+  #define TR_MAVLINK_GPS                  "GPS"
+  #define TR_MAVLINK_NO_FIX               "NO Fix"
+  #define TR_MAVLINK_SAT                  "SAT"
+  #define TR_MAVLINK_HDOP                 "HDOP"
+  #define TR_MAVLINK_LAT                  "LAT"
+  #define TR_MAVLINK_LON                  "LON"
 #endif
 
 
@@ -755,10 +759,10 @@
 #define TR_ABOUT_PARENTS_3     "ER9X (Erez Raviv)"
 #define TR_ABOUT_PARENTS_4     "TH9X (Thomas Husterer)"
 
-#define TR_CHR_SHORT  's'
-#define TR_CHR_LONG   'l'
-#define TR_CHR_TOGGLE 't'
-#define TR_CHR_HOUR   'h'
+#define TR_CHR_SHORT           's'
+#define TR_CHR_LONG            'l'
+#define TR_CHR_TOGGLE          't'
+#define TR_CHR_HOUR            'h'
 
 #define TR_BEEP_VOLUME         "Volym Pip"
 #define TR_WAV_VOLUME          "Volym Wav"
