--- a/radio/src/translations/it.h.txt
+++ b/radio/src/translations/it.h.txt
@@ -301,7 +301,7 @@
 #define TR_VSWASHTYPE    "--- ""120 ""120X""140 ""90\0"
 
 #define LEN_VKEYS        "\005"
-#define TR_VKEYS         TR(" Menù"" EXIT""  DN ""   UP""   SX""   DX", " Menu"" Exit""Enter"" Page"" Plus""Minus")
+#define TR_VKEYS         TR("Menù\0""EXIT\0""DN\0  ""UP\0  ""SX\0  ""DX\0  ", "Menu\0""Exit\0""Enter""Page\0""Plus\0""Minus")
 
 #define LEN_VRENCODERS       "\003"
 #define TR_VRENCODERS        "REa""REb"
