--- a/radio/src/translations/cz.h.txt
+++ b/radio/src/translations/cz.h.txt
@@ -33,7 +33,7 @@
  *
  * !!!!! DO NOT EDIT cz.h - EDIT cz.h.txt INSTEAD !!!!!!!   
  */
-  /* Fotmatting octal codes available in TR_ strings:
+  /* Formatting octal codes available in TR_ strings:
  *  \037\x       -sets LCD x-coord (x value in octal)
  *  \036         -newline (ARM boards only)
  *  \001 to \035 -extended spacing (value * FW/2)
@@ -364,12 +364,12 @@
 #define TR_VFAILSAFE           "Držet\0   ""Vlastní\0 ""Bez pulzů"
 
 #if defined(MAVLINK)
-  #define LEN_MAVLINK_BAUDS		"\006"
-  #define TR_MAVLINK_BAUDS		"4800  ""9600  ""14400 ""19200 ""38400 ""57600 ""76800 ""115200"
-  #define LEN_MAVLINK_AC_MODES	"\011"
-  #define TR_MAVLINK_AC_MODES	"Stabilize""Acro     ""Alt Hold ""Auto     ""Guided   ""Loiter   ""RTL      ""Circle   ""Pos Hold ""Land     ""OF Loiter""Toy A    ""Toy M    ""INVALID  "
-  #define LEN_MAVLINK_AP_MODES	"\015"
-  #define TR_MAVLINK_AP_MODES	"Manual       ""Circle       ""Stabilize    ""Training     ""Fly by Wire A""Fly by Wire A""Auto         ""RTL          ""Loiter       ""Guided       ""Initialising ""INVALID      "
+  #define LEN_MAVLINK_BAUDS    "\006"
+  #define TR_MAVLINK_BAUDS     "4800  ""9600  ""14400 ""19200 ""38400 ""57600 ""76800 ""115200"
+  #define LEN_MAVLINK_AC_MODES "\011"
+  #define TR_MAVLINK_AC_MODES  "Stabilize""Acro     ""Alt Hold ""Auto     ""Guided   ""Loiter   ""RTL      ""Circle   ""Pos Hold ""Land     ""OF Loiter""Toy A    ""Toy M    ""INVALID  "
+  #define LEN_MAVLINK_AP_MODES "\015"
+  #define TR_MAVLINK_AP_MODES  "Manual       ""Circle       ""Stabilize    ""Training     ""Fly by Wire A""Fly by Wire A""Auto         ""RTL          ""Loiter       ""Guided       ""Initialising ""INVALID      "
 #endif
 
 // ZERO TERMINATED STRINGS
@@ -393,11 +393,15 @@
 #define TR_MOVINGMODEL         "Přesouvám model."
 #define TR_LOADINGMODEL        "Aktivuji model.."
 #define TR_NAME                "Jméno"
-#define TR_MODELNAME             "Název modelu"
-#define TR_PHASENAME             "Jméno"
-#define TR_MIXNAME               "Jméno"
-#define TR_EXPONAME              "Jméno"
-#define TR_BITMAP                "Obrázek"
+#define TR_MODELNAME           "Název modelu"
+#define TR_PHASENAME           "Jméno"
+#define TR_MIXNAME             "Jméno"
+#if defined(PCBTARANIS)
+  #define TR_EXPONAME          "Line Name"
+#else
+  #define TR_EXPONAME          "Jméno"
+#endif
+#define TR_BITMAP              "Obrázek"
 #define TR_TIMER               "Stopky "
 #define TR_ELIMITS             TR("Limit+25%", "Kanál +/- 125%")
 #define TR_ETRIMS              TR("širšíTrim", "Široký trim")
@@ -497,7 +501,7 @@
 #define TR_THRTHP              "THR\037\146TH%"
 #define TR_TOT                 "TOT"
 #define TR_TMR1LATMAXUS        "Tmr1Lat max\037\124us"
-#define STR_US (STR_TMR1LATMAXUS+13)
+#define STR_US                 (STR_TMR1LATMAXUS+13)
 #define TR_TMR1LATMINUS        "Tmr1Lat min\037\124us"
 #define TR_TMR1JITTERUS        "Tmr1 Jitter\037\124us"
 
@@ -540,6 +544,9 @@
 
 
 // Alignment
+
+
+
 
 
 #define TR_MENUINPUTS          "DR/EXPO"
@@ -759,3 +766,8 @@
 #define TR_WAV_VOLUME          "Zvuky WAV"
 #define TR_VARIO_VOLUME        "Vario"
 #define TR_BG_VOLUME           "WAV na pozadí"
+
+#define TR_TOP_BAR             "Top Bar"
+#define TR_ALTITUDE            INDENT "Altitude"
+#define TR_MODS_FORBIDDEN      "Modifications forbidden!"
+#define TR_UNLOCKED            "Unlocked"
