--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -33,7 +33,7 @@
  *
  * !!!!! DO NOT EDIT de.h - EDIT de.h.txt INSTEAD !!!!!!!   
  */
- /* Fotmatting octal codes available in TR_ strings:
+ /* Formatting octal codes available in TR_ strings:
  *  \037\x       -sets LCD x-coord (x value in octal)
  *  \036         -newline (ARM boards only)
  *  \001 to \035 -extended spacing (value * FW/2)
@@ -364,12 +364,12 @@
 #define TR_VFAILSAFE           "Hold\0    ""Custom\0  ""No pulses"
 
 #if defined(MAVLINK)
-  #define LEN_MAVLINK_BAUDS		"\006"
-  #define TR_MAVLINK_BAUDS		"4800  ""9600  ""14400 ""19200 ""38400 ""57600 ""76800 ""115200"
-  #define LEN_MAVLINK_AC_MODES	"\011"
-  #define TR_MAVLINK_AC_MODES	"Stabilize""Acro     ""Alt Hold ""Auto     ""Guided   ""Loiter   ""RTL      ""Circle   ""Pos Hold ""Land     ""OF Loiter""Toy A    ""Toy M    ""INVALID  "
-  #define LEN_MAVLINK_AP_MODES	"\015"
-  #define TR_MAVLINK_AP_MODES	"Manual       ""Circle       ""Stabilize    ""Training     ""Fly by Wire A""Fly by Wire A""Auto         ""RTL          ""Loiter       ""Guided       ""Initialising ""INVALID      "
+  #define LEN_MAVLINK_BAUDS    "\006"
+  #define TR_MAVLINK_BAUDS     "4800  ""9600  ""14400 ""19200 ""38400 ""57600 ""76800 ""115200"
+  #define LEN_MAVLINK_AC_MODES "\011"
+  #define TR_MAVLINK_AC_MODES  "Stabilize""Acro     ""Alt Hold ""Auto     ""Guided   ""Loiter   ""RTL      ""Circle   ""Pos Hold ""Land     ""OF Loiter""Toy A    ""Toy M    ""INVALID  "
+  #define LEN_MAVLINK_AP_MODES "\015"
+  #define TR_MAVLINK_AP_MODES  "Manual       ""Circle       ""Stabilize    ""Training     ""Fly by Wire A""Fly by Wire A""Auto         ""RTL          ""Loiter       ""Guided       ""Initialising ""INVALID      "
 #endif
 
 // ZERO TERMINATED STRINGS
@@ -396,7 +396,11 @@
 #define TR_MODELNAME           "Modell Name"
 #define TR_PHASENAME           "Phase Name"
 #define TR_MIXNAME             "Mix Name"
-#define TR_EXPONAME            "Expo Name"
+#if defined(PCBTARANIS)
+  #define TR_EXPONAME          "Linie Name"
+#else
+  #define TR_EXPONAME          "Expo Name"
+#endif
 #define TR_BITMAP              "Modell Bild"
 #define TR_TIMER               TR("Stoppuhr","Stoppuhr ")
 #define TR_ELIMITS             TR("Erw.Limit","Erweit. Limits")
@@ -497,7 +501,7 @@
 #define TR_THRTHP              "THR\037\146TH%"
 #define TR_TOT                 "TOT"
 #define TR_TMR1LATMAXUS        "Tmr1Lat max\037\124us"
-#define STR_US (STR_TMR1LATMAXUS+13)
+#define STR_US                 (STR_TMR1LATMAXUS+13)
 #define TR_TMR1LATMINUS        "Tmr1Lat min\037\124us"
 #define TR_TMR1JITTERUS        "Tmr1 Jitter\037\124us"
 
@@ -762,3 +766,8 @@
 #define TR_WAV_VOLUME          "Wav Lautst"
 #define TR_VARIO_VOLUME        "Vario Lautst"
 #define TR_BG_VOLUME           "Bg Lautst"
+
+#define TR_TOP_BAR             "Top Bar"
+#define TR_ALTITUDE            INDENT "Altitude"
+#define TR_MODS_FORBIDDEN      "Modifications forbidden!"
+#define TR_UNLOCKED            "Unlocked"
